@@ -1,5 +1,10 @@
 2008-03-30  Matthias Clasen  <mclasen@redhat.com>
 
+	* glib/gtester.c: Don't use ARG_MAX.  (#522335, patch by 
+	Sebastian Dröge)
+
+2008-03-30  Matthias Clasen  <mclasen@redhat.com>
+
 	* glib/gmacros.h: Add macros wrapping the gcc alloc_size 
 	function attribute.  (#523019, Rodrigo Moya)
 
